style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-size: 1.1rem;
  
font-family: 'Ubuntu', sans-serif;
  background: #f9f9f9;
}

a {
  color: #333;
  text-decoration: none;
}

.container {
  max-width: 1100px;
  margin: auto;
  overflow: auto;
  padding: 0 2rem;
}

.main-header {
  /* height: 55vh; */
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.main-header h1 {
  font-size: 3  rem;
  margin-bottom: 2rem;
  line-height: 1.2;
}

.main-header h1 span {
  color: #b50d10;
}

.main-header p {
  font-size: 2rem;
}

main section img {
  width: 100%;
}

.card {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 2rem;
  background: #f1f1f1;
  margin-bottom: 2rem;
}

.card h3 {
  margin-bottom: 2rem;
}

.card img {
  height: 400px;
}

.card > div {
  padding: 2rem;
}

.card:nth-child(even) img {
  order: 2;
}


.btn {
  display: inline-block;
  background: #000;
  color: #fff;
  padding: 0.8rem 1.8rem;
  margin-top: 2rem;
  cursor: pointer;
}

.btn:hover {
  opacity: 0.8;
  
}


.nav-link:hover {
  color: white;
  
}

.nav-item{
  padding: 1px 10px;
}

@media(max-width:600px) {
  .card {
    display: block;
  }
}




.schedule-item:hover{
    background-color: greenyellow;
}


.navbar{
  background-color: #1C2331;
}


/* @media (min-width: 800px) and (max-width: 850px) {
    .navbar:not(.top-nav-collapse) {
        background: #1C2331!important;
    }
} */
/* .view,body,html{height:100%}.navbar{background-color:rgba(0,0,0,.2)}.page-footer,.top-nav-collapse{background-color:#1C2331}@media only screen and (max-width:768px){.navbar{background-color:#1C2331}} */


.nav-link {	
    font-size: 1.2em;
}

html {
    scroll-behavior: smooth;
  }

  /* .carousel-content {
    position: absolute;
    display: inline-block;
    bottom: 10%;
    left: 5%;
    right: 5%;
    top: 20%;
    font-size: 2em;
    text-align: center;
    color: white;
    text-shadow: 0 1px 2px rgba(0,0,0,.6);
  } */


  /* .carouselExampleCaptions
  {
    height:20vh;
  } */

 
  
@media screen and (min-width: 700px) {
  #img1   {
    
    height: auto;
    width: 100%;
    overflow: hidden;
    bottom: 0;
  right: 0;
    
  }
}


@media screen and (max-width: 700px) {
  #img1  {
    height: 100%;
    width: auto;
    overflow: hidden;
    top: 0;
  left: 0;
  
  }
}


@media screen and (min-width: 1450px) {
  #img2   {
    
    height: auto;
    width: 100%;
    overflow: hidden;
    bottom: 0;
  right: 0;
    
  }
}


@media screen and (max-width: 1450px) {
  #img2  {
    height: 100%;
    width: auto;
    overflow: hidden;
    top: 0;
  left: 0;
  
  }
}

@media screen and (min-width: 750px) {
  #img3   {
    
    height: auto;
    width: 100%;
    overflow: hidden;
    bottom: 0;
  right: 0;
    
  }
}


@media screen and (max-width: 750px) {
  #img3  {
    height: 100%;
    width: auto;
    overflow: hidden;
    top: 0;
  left: 0;
  
  }
}

@media screen and (min-width: 750px) {
  #img3   {
    
    height: auto;
    width: 100%;
    overflow: hidden;
    bottom: 0;
  right: 0;
    
  }
}


@media screen and (max-width: 750px) {
  #img3  {
    height: 100%;
    width: auto;
    overflow: hidden;
    top: 0;
  left: 0;
  
  }
}

.carousel-item{
  width:100%;
  height:350px;
  overflow:hidden;
}
#img1 {
  /* width:100%; */
  /* height: 100%; */
  position: absolute;
  
}
.d-block w-100 {
  width:100%;
  height:550px;
  object-fit:cover;
  object-position:50% 50%;
 }
/* .carousel-inner > .carousel-item {
  height: 100vh;
}

.carousel-inner > .carousel-item > img {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  max-height: 800px;
  width: auto;
} */

.schedule{
  /* margin-left: 50px; */
  margin: 2rem 3rem;
}

#wrapper{
  max-width: 1250px;
}

a{
  color: brown;
}
a:hover{
  color: brown;
}
ul{
  list-style: inside;
}

#home{
  font-size: medium;
}

.sponsor{
  margin: 0;
  padding: 1em;
}

html, body {
  height: 100%;
  margin: 0;
}
.content-wrapper {
  min-height: 100%;

  /* Equal to height of footer */
  /* But also accounting for potential margin-bottom of last child */
  margin-bottom: -50px;
}
.footer,
.push {
  height: 50px;
}


@media screen and (max-width: 1200px) {
  #small_logo  {
    display: visible;
  }
  #big_logo  {
    display: none;
  }
}


@media screen and (min-width: 1200px) {
  #big_logo  {
    display: visible;
  }
  #small_logo  {
    display: none;
  }
}

